_build/html/reports/Tratamiento_Antirreflejante.log
Traceback (most recent call last):
  File "/home/edu/anaconda3/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/edu/anaconda3/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/edu/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# NO TOCAR. SOLO EJECUTAR (SOLO UNA VEZ)
####################################################################################
%pylab inline
lambda0 = int(np.random.rand()*150 +475)
print "Longitud de onda para la que optimizamos el tratamiento = ",lambda0, " nm"
------------------

[0;36m  File [0;32m"/tmp/ipykernel_20475/1992368028.py"[0;36m, line [0;32m5[0m
[0;31m    print "Longitud de onda para la que optimizamos el tratamiento = ",lambda0, " nm"[0m
[0m                                                                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print("Longitud de onda para la que optimizamos el tratamiento = ",lambda0, " nm")?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Longitud de onda para la que optimizamos el tratamiento = ",lambda0, " nm")? (1992368028.py, line 5)

